examples/src/fail_tests/no_box_non_aliasable.rs
use ouroboros::self_referencing;

#[self_referencing]
struct Test {
    #[no_box]
    data: (),
    #[borrows(data)]
    field: (),
}

#[self_referencing]
struct Test {
    #[no_box]
    data: Box<()>,
    #[borrows(data)]
    field: (),
}
